gitignore updated, along with thesis

--- a/ThesisReport/BinocularVision.tex
+++ b/ThesisReport/BinocularVision.tex
@@ -22,7 +22,7 @@ the same time by the two eyes, while the observer standing at a fixed position \
 [.4\linewidth]{\includegraphics{Mparallax}}%
 \subcaptionbox{Binocular Parallax}
 [.4\linewidth]{\includegraphics{Bparallax}}%
-\caption{Motion parallax and binocular arallax difference}
+\caption{Motion parallax and binocular parallax difference}
 \label{fig:parallax}
 \end{figure}
 
