Intro chapter updated with Oscar first revision, system and reference also updated

--- a/ThesisReport/System.tex
+++ b/ThesisReport/System.tex
@@ -1,16 +1,14 @@
 \chapter{Design of Evaluation Scheme}
 \label{chap:System}
 
-This chapter walks through the steps taken in order to build up our evaluation framework and justification of each decision taken during this design.
+This chapter walks through the steps taken in order to build our evaluation system and describes its keys components in detail.
 
 %Maybe should be moved to introduction?
 \section{Design Criteria}
 
 Since outdoor AR applications are the focus of this study, we have designed our evaluation model within this framework. Moreover, all the evaluation
-metrics are measured based on the relevant factors described earlier in chapters \ref{chap:Introduction} and \ref{chap:BinocularVision}.
-%Move to Introduction Chapter
-%As briefly mentioned in chapter \ref{chap:Introduction}, there are already different evaluation schemes to assess stereo correspondence solutions. The Middlebury Stereo \cite{mideval} and 
-%the Kitti Stereo benchmarks \cite{kitti} are two of the most popular and widely used evaluation models through which a solution can be evaluated and compared to others.
+metrics are measured based on the relevant factors described earlier in chapters \ref{chap:Introduction} and \ref{chap:BinocularVision} as perceieved
+by the human visual system.
 
 %%%
 %In these models, a pixel is considered as an \textit{outlier} if the error between the ground truth disparity and the disparity found by the solution is more than 
