--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -17,6 +17,22 @@
   howpublished = "\url{http://www.google.com/glass/start/}"
 }
 
+@misc{skinetic,
+  author = {SoftKinetic},
+  title = {{DepthSence Cameras}},
+  month = May,
+  year = {2013},
+  howpublished = "\url{http://www.softkinetic.com/en-us/products/depthsensecameras.aspx}"
+}
+
+@misc{mkinect,
+  author = {Microsoft},
+  title = {{Kinect}},
+  month = May,
+  year = {2013},
+  howpublished = "\url{http://msdn.microsoft.com/en-us/library/hh973078.aspx#Depth_Ranges}"
+}
+
 @article{liv05,
   title={Evaluating human factors in augmented reality systems},
   author={Livingston, Mark A},
